--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>secret garden
+    <title>
     
     </title>
     <link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
 <body>
     <div class="chat-container">
         <div class="sidebar">
-            <div class="logo">ChatApp</div>
+            <div class="logo">secret garden</div>
             <ul class="contact-list">
                 <li class="contact active">User 1</li>
                 <li class="contact">User 2</li>
