--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="sidebar">
             <div class="logo">secret garden</div>
             <ul class="contact-list">
-                <li class="contact active">User 1</li>
+                <li class="contact active">Lily</li>
                 <li class="contact">User 2</li>
                 <li class="contact">User 3</li>
             </ul>
