--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="logo">secret garden</div>
             <ul class="contact-list">
                 <li class="contact active">Lily</li>
-                <li class="contact">User 2</li>
-                <li class="contact">User 3</li>
+                <li class="contact">Lavender</li>
+                <li class="contact">Jasmine</li>
             </ul>
         </div>
         <div class="chat-section">
