--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <div class="chat-options">...</div>
             </div>
             <div class="chat-body">
-                <div class="message received">Hello!</div>
-                <div class="message sent">Hi, how are you?</div>
-                <div class="message received">I'm good, thanks!</div>
+                <div class="message received">Rise and shine 🙆🏻‍♀️💫</div>
+                <div class="message sent">Hahahah morning lily , ready for Wonderkind 2025 ?</div>
+                <div class="message received">No need to ask darl , i'm really ready for it !</div>
             </div>
             <div class="chat-input">
                 <input type="text" placeholder="Type a message...">
